tests/paczka2/big_fuzzy/49759258.err
Error in line 1: 1QpJN8v A610 75,9
Error in line 10: V8hUXtT4JPc A610 59,1
Error in line 21: Jul3s A610 19,8
Error in line 28: Jul3s A25 34,1
Error in line 36: 1QpJN8v A610 42,8
Error in line 38: 1QpJN8v A428 5,2
Error in line 32: Jul3s A610 0,3
Error in line 41: Jul3s A428 59,5
Error in line 44: swpgX6w A610 47,65
Error in line 49: swpgX6w A610 35,6
Error in line 54: swpgX6w A25 11,6
Error in line 55: V8hUXtT4JPc A428 96,0
Error in line 68: swpgX6w A428 7,31
Error in line 59: zxtjKyNp A25 11,3
Error in line 67: V8hUXtT4JPc A610 32,3
Error in line 56: S150 A610 379,6
Error in line 63: cNpY0ceaVTQ S150 30,2
Error in line 80: S150 A428 65,4
Error in line 81: cNpY0ceaVTQ A610 58,7
Error in line 96: S150 A25 13,2
Error in line 97: 1QpJN8v A25 92,2
Error in line 106: S150 S150 31,87
Error in line 109: Jul3s A25 40,6
Error in line 98: S150 A428 81,6
Error in line 108: swpgX6w A610 85,0
Error in line 113: Jul3s S150 -1,1
Error in line 114: V8hUXtT4JPc A25 33,5
Error in line 129: 1QpJN8v S150 176,5
Error in line 110: Jul3s S150 18,8
Error in line 130: 1QpJN8v A25 40,7
Error in line 111: S150 S150 48,8
Error in line 156: zxtjKyNp A428 76,8
Error in line 162: zxtjKyNp A25 19,2
Error in line 155: 1QpJN8v A428 79,9
Error in line 166: 1QpJN8v A25 98,5
Error in line 170: 1QpJN8v A428 4,8
Error in line 185: S150 A25 91,3
Error in line 151: V8hUXtT4JPc A610 33,5
Error in line 193: 1QpJN8v A428 55,1
Error in line 179: zxtjKyNp A610 2,0
Error in line 198: zxtjKyNp S150 47,6
Error in line 194: cNpY0ceaVTQ S150 66,1
Error in line 208: cNpY0ceaVTQ A610 22,1
Error in line 216: zxtjKyNp A428 10,6
Error in line 169: swpgX6w A428 0,0
Error in line 219: zxtjKyNp S150 42,9
Error in line 215: V8hUXtT4JPc A428 25,2
Error in line 240: zxtjKyNp A610 7,8
Error in line 234: S150 S150 359,6
